2007-08-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/gtkhex.c (gtk_hex_insert_autohilight):
	Pass the right type to sizeof for the malloc
	Patch from Stanislav Brabec <sbrabec@suse.cz>

	Fixes #339055
	
2007-08-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Update version to 2.19.0 for release
	Don't pass arguments to AM_INIT_AUTOMAKE and AC_INIT both
	
2007-08-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* .cvsignore: Remove all the now-unneeded .cvsignore files

	* *.make: Remove these included makefiles as they are autogenerated

	* Makefile.am: Add DISTCHECK_CONFIGURE_FLAGS
	Add CLEANFILES and DISTCLEANFILES
	Add gnome-doc-utils files to EXTRA_DIST
	Remove omf-install from SUBDIRS

	* autogen.sh: Require automake 1.7 and set up for gnome-doc-utils

	* configure.in: Update to use gnome-doc-utils
	Remove help/$lang/Makefile from AC_OUTPUT
	Remove omf-install from AC_OUTPUT

	* help/*/Makefile.am:
	* help/*/ghex2.xml:
	* help/*/ghex2-*.omf:
	* help/*/legal.xml:
	* help/*/topic.dat:
	* help/*/*.html:
	* help/*/*.png:
	* help/*/*.sgml:
	* help/*/*.txt:
	Remove all these files that are no longer needed with gnome-doc-utils

	* help/*/*.po: New po files for translations with gnome-doc-utils

	* help/Makefile.am: Update to use gnome-doc-utils
	
	* help/ghex.omf.in: Generate the translated omf files from this

2007-08-06  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am: Remove icon install bits
	Add icons to SUBDIRS

	* configure.in: Create Makefiles for icons subdirectories

	* ghex.desktop.in: Use ghex as the Icon instead of gnome-ghex.png

	* gnome-ghex.png: Replaced with udpated style icons

	* icons: Add new icons subdir with icons and automake files
	New icon original from Matteo Drera <seven.issimo@gmail.com>
	
	* src/main.c (main): Set the default window icon from the theme
	rather than a hardcoded path to the old gnome-ghex.png

	Fixes #405331
	
2007-08-03  Rodney Dawes  <dobey.pwns@gmail.com>
