@@ -1,3 +1,10 @@
+2007-08-09  Rodney Dawes  <dobey.pwns@gmail.com>
+
+	* src/gtkhex.c (gtk_hex_key_press):
+	Handle keypad presses appropriately when numlock is on/off
+
+	Fixes #464979
+
 2007-08-08  Rodney Dawes  <dobey.pwns@gmail.com>
 
 	* src/gtkhex.c (gtk_hex_insert_autohilight):
